# Kagero

./: Cargo.toml  Makefile  README.md  SECURITY.md  go.mod  go.sum  kagero.go
.github/workflows/: codeql-analysis.yml  rust-clippy.yml
commands/: update.go
docs/: README.md
docs/specs/: Config.d.ts  Config.md  Katana.d.ts  Katana.md  Orochi.md  Shuriken.d.ts  Shuriken.md
docs/under-the-hood/: Installation.md  UpdateCycle.md
docs/usage/: Installing.md  Removing.md  Updating.md
src/: go.mod  kagero.go  lib.rs  main.rs  printer.rs
src/commands/: install.go  sync.go
src/config/: config.go
src/handles/: error.go
src/orochi/: downloader.rs  meta.rs  mod.rs
src/orochi/repository/: errors.rs  ftp.rs  http.rs  mod.rs  ssh.rs
src/repo/: downloader.go  katana.go  shuriken.go
src/stdio/: printer.go
