[package]
name = "kagero"
version = "0.1.0"
edition = "2021"
authors = ["Stridsvagn69420 (https://github.com/Stridsvagn69420)"]
description = "A cross-platform universal and easy to use package manager"
categories = ["command-line-utilities", "filesystem", "network-programming", "accessibility"]
keywords = ["package-manager", "command-line-utility", "kagero", "orochi", "cross-platform"]
readme = "README.md"
repository = "https://github.com/Stridsvagn69420/Kagero"
homepage = "https://github.com/Stridsvagn69420/Kagero"
documentation = "https://docs.rs/kagero"
license = "eupl-1.2"
exclude = ["/target", "/.vscode/", "/.github/", "/target/", "/SECURITY.md"]

[dependencies]
reqwest = { version = "0.11.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["printer", "orochi-repo"]
printer = []
orochi = ["serde", "serde_json"]
orochi-repo = ["orochi", "reqwest"]

[lib]
name = "kagero"
path = "src/lib.rs"

[[bin]]
name = "kagero"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
debug = true
