[package]
name = "kagero"
version = "0.2.0"
edition = "2021"
authors = ["Stridsvagn69420 (https://github.com/Stridsvagn69420)"]
description = "A cross-platform universal and easy to use package manager"
categories = ["command-line-utilities", "filesystem", "network-programming", "accessibility"]
keywords = ["package-manager", "command-line-utility", "kagero", "orochi", "cross-platform"]
readme = "README.md"
repository = "https://github.com/Stridsvagn69420/Kagero"
homepage = "https://github.com/Stridsvagn69420/Kagero"
documentation = "https://docs.rs/kagero"
license = "EUPL-1.2"
exclude = ["/target", "/.vscode/", "/.github/", "/target/", "/SECURITY.md"]

[dependencies]
# Orochi Meta
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Orochi Utils
thiserror = { version "1.0", optional = true }
reqwest = { version = "0.11.11", optional = true }
url = { version = "2.2.2", optional = true }
ftp = { version = "3.0.1", optional = true }
ssh2 = { version = "0.9.3", optional = true }
git2 = { version = "0.14", optional = true }
# Kagero Packages and Filesystem
rusqlite = { version = "0.27.0", features = ["bundled"], optional = true }

[features]
default = ["printer", "orochi-repo"]
printer = []
runner = []
orochi = ["serde", "serde_json"]
orochi-repo = ["orochi", "thiserror", "reqwest", "url", "ftp", "ssh2", "git2"]

[lib]
name = "kagero"
path = "src/lib.rs"

[[bin]]
name = "kagero"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
debug = true
